Small updates. Better Superset dashboard

--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<title>Workshop de Big Data con Apache Spark [🇪🇸]</title>
+<title>Workshop de Big Data con Apache Spark</title>
 
 <xmp theme="spacelab" style="display:none;">
 
-Material del Workshopde Big Data
+# Material del Workshopde Big Data
 
-## Documentación
-Todo el material del curso está [disponible en Github](https://github.com/arjones/bigdata-workshop-es)
+## Documentaci&#xF3;n
+Todo el material del curso est&#xE1; [disponible en Github](https://github.com/arjones/bigdata-workshop-es)
 
 ## Puertos y Servicios
 El listado abajo contiene los puertos para acceso a las interfaces graficas de los servicios instalados.
@@ -19,8 +19,8 @@ Superset | [Dashboard](http://localhost:8088/)
 
 ---
 ## Sobre
-Gustavo Arjones &copy; 2017
-[arjon.es](http://arjon.es) | [LinkedIn](http://linkedin.com/in/arjones/) | [Twitter](https://twitter.com/arjones)
+Gustavo Arjones &copy; 2017-2018-2018
+[arjon.es](https://arjon.es) | [LinkedIn](https://linkedin.com/in/arjones/) | [Twitter](https://twitter.com/arjones)
 </xmp>
 
 <script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
