--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -19,7 +19,7 @@ Superset | [Dashboard](http://localhost:8088/)
 
 ---
 ## Sobre
-Gustavo Arjones &copy; 2017-2018-2018
+Gustavo Arjones &copy; 2017-2018
 [arjon.es](https://arjon.es) | [LinkedIn](https://linkedin.com/in/arjones/) | [Twitter](https://twitter.com/arjones)
 </xmp>
 
