--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -15,6 +15,7 @@ El listado abajo contiene los puertos para acceso a las interfaces graficas de l
 Servicio | Acceso
 --|--
 Spark | [Spark Master](http://localhost:8080) / [Job Progress](http://localhost:4040)
+pySpark | [Jupyter Notebook](http://localhost:8888/)
 Superset | [Dashboard](http://localhost:8088/)
 
 ---
