Minor improvements for new Superset setup

--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -39,7 +39,7 @@ El listado abajo contiene los puertos para acceso a las interfaces graficas de l
     <tr>
       <td>Superset</td>
       <td><a href="/" onclick="javascript:event.target.port=8088" target="_blank">Dashboard</a></td>
-      <td>Username: <code>admin</code><br />Password: <code>superset</code></td>
+      <td>Username/Password creado durante superset-init </td>
     </tr>
   </tbody>
 </table>
